--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "career-page-project",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,9 +13,7 @@
     "firebase": "^9.23.0",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
+    "react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.0.4",
     "vite": "^5.0.0"
   }
